# learning_cmake

./: .gitignore  README.md
1-Basic_starting_point/: CMakeLists.txt  README  TutorialConfig.h.in  tutorial.cxx
2-Adding_a_library/: CMakeLists.txt  notes
2-Adding_a_library/MathFunctions/: CMakeLists.txt
3-Adding_usage_requirements_for_a_library/: CMakeLists.txt  notes  tutorial.cxx
3-Adding_usage_requirements_for_a_library/MathFunctions/: CMakeLists.txt
4-Installing_and_testing/: CMakeLists.txt  notes
4-Installing_and_testing/MathFunctions/: CMakeLists.txt
5-Adding_system_introspection/: TutorialConfig.h.in  notes
5-Adding_system_introspection/MathFunctions/: CMakeLists.txt  mysqrt.cxx
6-adding_a_custom_command_and_generated_file/: CMakeLists.txt  README
6-adding_a_custom_command_and_generated_file/MathFunctions/: mysqrt.cxx
7-Packaging_an_installer/: CMakeLists.txt  README
8-Adding_support_for_a_testing_dashboard/: CMakeLists.txt  README
8-Adding_support_for_a_testing_dashboard/MathFunctions/: CMakeLists.txt
master_cmake/: README.md
master_cmake/1-Introduction/: CMakeLists.txt
master_cmake/1-Introduction/include/: check_numbers.h  div.h  main.h  sum.h
master_cmake/1-Introduction/src/: check_numbers.c  div.c  main.c  sum.c  usage.c
